fix to horizontal alignment on mobile view

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -9,7 +9,7 @@ $white: #fff;
 .container-fluid {
   margin-top: 5%;
   text-align: center;
-  width: 80%;
+  width: 90%;
   border: 1px solid $font-color;
 }
 
@@ -23,7 +23,7 @@ body {
 }
 
 .auth-wrapper {
-  width: 80%;
+  width: 90%;
 }
 // #change-password {
 //   float: left;
@@ -50,7 +50,7 @@ button {
 
 .game-board {
   width: 100%;
-  margin: 10px 30px;
+  margin: 0 7%;
   font-family: 'Fredericka the Great', cursive;
 }
 
